# PyMeshit

./: .gitignore  .qmake.stash  CMakeLists.txt  CONSTRAINT_PROCESSING_SUMMARY.md  HULL_REFINEMENT_IMPLEMENTATION.md  MANIFEST.in  Makefile  Makefile.Debug  Makefile.Release  README.md  TETGEN_INTEGRATION.md  TRIPLE_POINT_FIX_SUMMARY.md  __tracked_surface.stl  _skipped.face  _skipped.node  better_triangulation.py  compare_triangulation_approaches.py  compare_triangulations.py  direct_standard_triangulation.py  direct_triangle_test.py  direct_triangulation.py  direct_triangulation_with_refinement.py  fault1.txt  final_uniform_triangulation.py  find_qt.py  hybrid_triangulation.py  improved_triangulation.py  interactive_visualization.py  main.py  matplotlib_visualization.py  meshit.cp312-win_amd64.pyd  meshit_workflow_gui.py  middle.txt  object_script.MeshIt.Debug  object_script.MeshIt.Release  output_delaunay.vtu  pyproject.toml  pyqt_meshit_gui.py  real_triangle_mesh.py  real_triangulation.py  (+67 more)
.github/workflows/: workflow.yml
debug_plc/: debug_plc_0.vtp  debug_plc_1.vtp
enhanced_triangulation/: test.txt
examples/: debug_test.py  feature_test.py  intersection_test.py  meshit_workflow_example.py  minimal_feature_test.py  minimal_test.py  simple_test.py  test_triangle_mesh.py
include/: geometry.h
meshit/: __init__.py  extensions.py  intersection_utils.py  pre_tetra_constraint_manager.py  tetra_mesh_utils.py  triangle_callback.cp311-win_amd64.pyd  triangle_callback.cpp  triangle_direct.py  triangle_wrapper.py  workflow.py
meshit.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
meshit/core/: __init__.py  _meshit.cp311-win_amd64.pyd  _meshit.cp312-win_amd64.pyd
release/: in.node  in.poly  moc_geometry.cpp  moc_glwidget.cpp  moc_mainwindow.cpp  out.edge  out.node  out.smesh
src/: python_bindings_minimal.cpp
tests/: README.md  clean_comparison.py  coarse_triangulation_demo.py  compare_triangulation.py  custom_triangulation.py  debug_triangle.py  generate_vtu_points.py  meshit_match.py  minimal_custom_triangulation.py  run_examples.py  run_examples_simplified.py  run_gradient_examples.py  run_workflow_examples.py  test_coarse_triangulation.py  test_coarse_triangulation_simplified.py  test_custom_refinement.py  test_enhanced_triangulation.py  test_gradient_refinement.py  test_meshit_paper.py  test_meshit_triangle.py  test_workflow_simple.py  visualize_25_points.py  visualize_test_points.py
tests/output/: grid_25_log.txt  grid_25_summary.csv  results.txt  test_points.txt
tests/output/basic_test/: grid_25_log.txt  grid_25_summary.csv
tests/output/circle_with_noise/: circle_40_log.txt  circle_40_summary.csv
tests/output/fine_gradients/: grid_36_log.txt  grid_36_summary.csv
tests/output/high_density/: grid_100_log.txt  grid_100_summary.csv
tests/output/load_points/: test_points_log.txt  test_points_summary.csv
tests/output/random_points/: random_50_log.txt  random_50_summary.csv
tests/output/save_points/: circle_30_log.txt  circle_30_summary.csv
tests/test_gradient_refinesize/test_20250318_103937/: results.txt
tests/test_gradient_refinesize/test_20250318_104019/: results.txt
tests/test_gradient_refinesize/test_20250318_104020/: results.txt
tests/triangulation_comparison/: comparison_summary.txt
triangulation_comparison/: comparison_summary.txt
vtu_output/: hull_points.txt  hull_points.vtu  points.csv  points.txt  test_points.vtu
(+14 files in other folders)
