[build-system]
requires = ["setuptools>=42", "wheel", "pybind11>=2.5.0"]
build-backend = "setuptools.build_meta"

[project]
name = "meshit"
version = "0.1.1"
description = "Python library for mesh generation and manipulation with C++ backend"
authors = [{name = "Waqas Hussain", email = "waqas.hussain117@gmail.com"}]
readme = "README.md"
requires-python = ">=3.7"
dependencies = ["pybind11>=2.5.0"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/waqashussain/meshit"
Repository = "https://github.com/waqashussain/meshit"

[tool.setuptools]
packages = ["meshit"]
include-package-data = true